--- a/src/components/CurrencyCard.css
+++ b/src/components/CurrencyCard.css
@@ -4,4 +4,51 @@ input {
   height: 40px;
   text-align: center;
   font-size: 22px;
+  font-weight: bold;
+  border-radius: 10%;
+}
+.card {
+  background-color: #5674b1;
+  height: 400px;
+  width: 30%;
+  box-shadow: 7px 10px#4e536c;
+  border-radius: 3%;
+}
+
+.fromSelect {
+  background-color: #0654f0;
+  color: white;
+  width: 80px;
+  height: 35px;
+  border: 1px solid white;
+  font-size: 20px;
+  font-weight: bold;
+  margin-right: 20px;
+}
+
+.toSelect {
+  background-color: #0654f0;
+  color: white;
+  width: 80px;
+  height: 35px;
+  border: 1px solid white;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+label {
+  font-size: 18px;
+}
+
+.pair {
+  font-size: 30px;
+  font-weight: bold;
+}
+.rate {
+  font-size: 30px;
+  font-weight: bold;
+}
+p {
+  font-size: 30px;
+  font-weight: bold;
 }
