--- a/src/components/CurrencyCard.css
+++ b/src/components/CurrencyCard.css
@@ -16,7 +16,7 @@ input {
 }
 
 .fromSelect {
-  background-color: #0654f0;
+  background-color: #05235e;
   color: white;
   width: 80px;
   height: 35px;
@@ -27,15 +27,20 @@ input {
 }
 
 .toSelect {
-  background-color: #0654f0;
+  background-color: #05235e;
   color: white;
   width: 80px;
   height: 35px;
   border: 1px solid white;
   font-size: 20px;
   font-weight: bold;
+  margin-left: 15px;
 }
 
+.one {
+  font-size: 30px;
+  font-weight: bold;
+}
 label {
   font-size: 18px;
 }
